starting the blog page

--- a/wp-content/languages/themes/twentysixteen-pt_BR.po
+++ b/wp-content/languages/themes/twentysixteen-pt_BR.po
@@ -7,16 +7,16 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: GlotPress/1.0-alpha-1100\n"
+"X-Generator: GlotPress/1.1.0-alpha\n"
 "Project-Id-Version: Twenty Sixteen\n"
-
-#. Theme Name of the plugin/theme
-msgid "Twenty Sixteen"
-msgstr "Twenty Sixteen"
 
 #. Description of the plugin/theme
 msgid "Twenty Sixteen is a modernized take on an ever-popular WordPress layout — the horizontal masthead with an optional right sidebar that works perfectly for blogs and websites. It has custom color options with beautiful default color schemes, a harmonious fluid grid using a mobile-first approach, and impeccable polish in every detail. Twenty Sixteen will make your WordPress look beautiful everywhere."
 msgstr "Twenty Sixteen é uma abordagem modernizada de um sempre popular template para WordPress — O cabeçalho horizontal com barra lateral direita opcional funciona perfeitamente para blogs e sites. Tem opções de cores personalizadas com belos esquemas de cores por padrão, uma harmoniosa grade fluida usando abordagem mobile-first e um polimento impecável em cada detalhe. Twenty Sixteen fará seu WordPress parecer lindo em todos os lugares."
+
+#. Theme Name of the plugin/theme
+msgid "Twenty Sixteen"
+msgstr "Twenty Sixteen"
 
 #. translators: %s: Name of current post
 #: image.php:84 template-parts/content-page.php:37
@@ -135,14 +135,14 @@ msgctxt "Used before publish date."
 msgid "Posted on"
 msgstr "Publicado em"
 
+#: inc/template-tags.php:50
+msgid "Leave a comment<span class=\"screen-reader-text\"> on %s</span>"
+msgstr "Deixe um comentário <span class=\"screen-reader-text\"> em %s</span>"
+
 #: inc/template-tags.php:38
 msgctxt "Used before post format."
 msgid "Format"
 msgstr "Formato"
-
-#: inc/template-tags.php:50
-msgid "Leave a comment<span class=\"screen-reader-text\"> on %s</span>"
-msgstr "Deixe um comentário <span class=\"screen-reader-text\"> em %s</span>"
 
 #: inc/template-tags.php:25
 msgctxt "Used before post author name."
@@ -161,30 +161,25 @@ msgstr "Cinza"
 msgid "Dark"
 msgstr "Escuro"
 
-#: inc/customizer.php:216
-msgid "Default"
-msgstr "Padrão"
-
 #: inc/customizer.php:171
 msgid "Secondary Text Color"
 msgstr "Cor de texto secundária"
+
+#: inc/customizer.php:216
+msgid "Default"
+msgstr "Padrão"
 
 #: inc/customizer.php:159
 msgid "Main Text Color"
 msgstr "Cor de texto principal"
 
-#: inc/customizer.php:147
-msgid "Link Color"
-msgstr "Cor de Link"
-
 #: inc/customizer.php:132
 msgid "Page Background Color"
 msgstr "Cor de fundo da página"
 
-#: image.php:102 single.php:29
-msgctxt "Parent post link"
-msgid "<span class=\"meta-nav\">Published in</span><span class=\"post-title\">%title</span>"
-msgstr "<span class=\"meta-nav\">Publicado em</span><span class=\"post-title\">%title</span>"
+#: inc/customizer.php:147
+msgid "Link Color"
+msgstr "Cor de Link"
 
 #: inc/customizer.php:117
 msgid "Base Color Scheme"
@@ -193,6 +188,11 @@ msgstr "Paleta de cores base"
 #: inc/back-compat.php:41 inc/back-compat.php:53 inc/back-compat.php:68
 msgid "Twenty Sixteen requires at least WordPress version 4.4. You are running version %s. Please upgrade and try again."
 msgstr "Twenty Sixteen requer pelo menos a versão 4.4 do WordPress. Você está rodando a versão %s. Por favor atualize e tente novamente."
+
+#: image.php:102 single.php:29
+msgctxt "Parent post link"
+msgid "<span class=\"meta-nav\">Published in</span><span class=\"post-title\">%title</span>"
+msgstr "<span class=\"meta-nav\">Publicado em</span><span class=\"post-title\">%title</span>"
 
 #: image.php:73
 msgctxt "Used before full size attachment link."
@@ -220,21 +220,13 @@ msgstr "Menu"
 msgid "Skip to content"
 msgstr "Pular para o conteúdo"
 
-#: functions.php:270
-msgid "expand child menu"
-msgstr "expandir submenu"
-
 #: functions.php:271
 msgid "collapse child menu"
 msgstr "colapsar submenu"
 
-#. translators: If there are characters in your language that are not supported
-#. by Merriweather, translate this to 'off'. Do not translate into your own
-#. language.
-#: functions.php:189
-msgctxt "Merriweather font: on or off"
-msgid "on"
-msgstr "ligada"
+#: functions.php:270
+msgid "expand child menu"
+msgstr "expandir submenu"
 
 #. translators: If there are characters in your language that are not supported
 #. by Montserrat, translate this to 'off'. Do not translate into your own
@@ -245,24 +237,32 @@ msgid "on"
 msgstr "ligada"
 
 #. translators: If there are characters in your language that are not supported
+#. by Merriweather, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:189
+msgctxt "Merriweather font: on or off"
+msgid "on"
+msgstr "ligada"
+
+#: functions.php:162
+msgid "Content Bottom 2"
+msgstr "Conteúdo inferior 2"
+
+#: functions.php:154 functions.php:164
+msgid "Appears at the bottom of the content on posts and pages."
+msgstr "Aparece na parte inferior do conteúdo nos posts e páginas."
+
+#: functions.php:152
+msgid "Content Bottom 1"
+msgstr "Conteúdo inferior 1"
+
+#. translators: If there are characters in your language that are not supported
 #. by Inconsolata, translate this to 'off'. Do not translate into your own
 #. language.
 #: functions.php:199
 msgctxt "Inconsolata font: on or off"
 msgid "on"
 msgstr "ativa"
-
-#: functions.php:154 functions.php:164
-msgid "Appears at the bottom of the content on posts and pages."
-msgstr "Aparece na parte inferior do conteúdo nos posts e páginas."
-
-#: functions.php:162
-msgid "Content Bottom 2"
-msgstr "Conteúdo inferior 2"
-
-#: functions.php:152
-msgid "Content Bottom 1"
-msgstr "Conteúdo inferior 1"
 
 #: functions.php:142
 msgid "Sidebar"
